# wootils

./: .gitignore  LICENSE  README.md  __init__.py  publish.yml  setup.cfg  setup.py
.github/workflows/: publish.yml
src/wootils/: __init__.py  acacia_nc.py  extract_suntans_rgrid.py  fft_utils.py  files.py  filters.py  fitters.py  linalg.py  ofreqs.py  plotcolours.py  plotnice.py  plottimeseries.py  sigint.py  spatial.py  stats.py  time_wutils.py  ufilters.py  uwindows.py  wootxr.py
src/wootils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
wootils/: inpex23_filtfunc.py  linalg.py  ofreqs.py  plotnice.py  plottimeseries.py
wootils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wutils/: fitters.py  plotnice.py
wutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
