[metadata]
name = wootils
author = William Edge
author_email = william.edge@uwa.edu.au
description = Python package for commonly used code.
license = BSD-3-Clause
long_description_content_type = text/markdown
url = https://github.com/williamedge/wootils
project_urls =
    Bug Tracker = https://github.com/williamedge/wootils/issues
    Changelog = https://github.com/williamedge/wootils/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    xarray
    matplotlib
    pandas


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wootils = wootils.app:entry_point